# fleet-strategy-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.lambda  README.md  eda.ipynb  main.py  pyproject.toml
dashboard/: README.md  app.py  common.py  constants.py  formatting.py  settings.py  shell.py
dashboard/tabs/: assistant.py  charts.py  downloads.py  drilldown.py  recommendations.py  sensitivity.py
data/: batch_refresh_data.csv  sample_data.csv
docs/: reason_code_reference.json
infra/terraform/: README.md  dashboard.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: deploy_aws.sh
src/fleet_strategy_engine/: __init__.py  assistant.py  config.py  geography.py  recommendation_context.py  scenario_analysis.py  schemas.py
src/fleet_strategy_engine/assistant/: __init__.py  core.py  graph.py  nodes.py  prompts.py  query_tools.py  scenario_tools.py
src/fleet_strategy_engine/aws/: __init__.py  lambda_handler.py
src/fleet_strategy_engine/engine/: __init__.py  explain.py  pricing.py  recommend.py
src/fleet_strategy_engine/pipeline/: __init__.py  features.py  io.py  run.py  summary.py  validate.py
tests/: test_assistant.py  test_cli.py  test_dashboard_artifacts.py  test_dashboard_sensitivity.py  test_lambda_handler.py  test_query_tools.py  test_scenario_tools.py
tests/engine/: test_pricing.py  test_recommend.py
tests/fixtures/: invalid_bad_values.csv  invalid_duplicate_rows.csv  invalid_missing_columns.csv  valid_sample.csv
tests/pipeline/: test_features.py  test_run.py  test_validate.py
