[project]
name = "fleet-strategy-engine"
version = "0.1.0"
description = "Local-first fleet strategy recommendation engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34.0",
    "langchain-core>=0.2.0,<0.3.0",
    "langchain-google-genai>=1.0.0,<2.0.0",
    "langgraph>=0.2.0,<0.3.0",
    "pandas>=2.2.0",
    "plotly>=6.8.0",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
